Fix display bug in Firefox
It doesn’t look like there’s an easy way to support Edge currently, but it should gains support in the future by stretch. Currently it should degrade gracefully.

--- a/assets/styles/elements.css
+++ b/assets/styles/elements.css
@@ -7,7 +7,8 @@ figure {
 }
 
 img {
-  width: fill-available;
+  justify-self: stretch;
+  align-self: stretch;
 }
 
 /* Forms */
